# ResumeAnalyzer

./: .dockerignore  .gitignore  DockerFile  README.md  compose.yaml  main.py  my_tasks  nginx.conf  pyproject.toml  redis_tasks.md.resolved
backend/: app.py
backend/Core/: config.py  db.py  limmiter.py  minio.py  reddis.py
backend/Middleware/: jwt_auth.py  limmiter.py  redis_cache.py
backend/Model/: auth_model.py  model.py
backend/Router/: auth.py  resume.py  user.py
backend/Service/: auth.py  resume.py
celery-resume-analyzer/: README.md  celery.py
celery-resume-analyzer/config/: celery_config.py
celery-resume-analyzer/tasks/: comparison_tasks.py  embedding_tasks.py
celeryResumeAnalyzer/: celery.py  requirements.txt
celeryResumeAnalyzer/EmbeddingModel/: BERT.py
celeryResumeAnalyzer/config/: celery_config.py  qdrant.py
celeryResumeAnalyzer/tasks/: embedding_task.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.d.ts  tailwind.config.js  tailwind.config.ts  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: LoadingScreen.tsx  ProtectedRoute.tsx
frontend/src/context/: AuthContext.tsx
frontend/src/lib/: api.ts  auth.ts  errors.ts
frontend/src/pages/: AuthPage.tsx  DashboardPage.tsx  LandingPage.tsx
